--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,13 @@
             <version>6.1.6.Final</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.24</version>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
 
 </project>
