--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,12 @@
             <version>1.4.5</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <version>8.0.31</version>
+        </dependency>
+
     </dependencies>
 
 </project>
