--- a/src/test/resources/hibernate.properties
+++ b/src/test/resources/hibernate.properties
@@ -1,4 +1,4 @@
-hibernate.connection.url=jdbc:h2:mem:test
+hibernate.connection.url=jdbc:h2:mem:test;MODE=MySQL;NON_KEYWORDS=USER
 hibernate.connection.username=sa
 hibernate.connection.password=
 hibernate.show_sql=true
